--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Red Rhombus — Remote Help</title>
   <meta name="description" content="Quick links for Red Rhombus remote support and installers." />
-  <meta property="og:title" content="Red Rhombus — Remote Help" />
+  <meta property="og:title" content="Red Rhombus - Remote Help" />
   <meta property="og:description" content="Fast support and remote access installers for Windows and macOS." />
   <meta property="og:type" content="website" />
   <meta name="theme-color" content="#c01b2b" />
