--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Red Rhombus — Remote Help</title>
+  <title>Red Rhombus - Remote Help</title>
   <meta name="description" content="Quick links for Red Rhombus remote support and installers." />
   <meta property="og:title" content="Red Rhombus - Remote Help" />
   <meta property="og:description" content="Fast support and remote access installers for Windows and macOS." />
